Add FontselectController with basic logic and tests.

--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -1,2 +1,9 @@
 <div class="fs-main">
+	<button ng-click="toggle()">Toggle</button>
+	<input type="hidden" value="{{currentFont}}"/>
+	<div class="fs-window" ng-show="active">
+		<ul>
+			<li ng-repeat="font in fonts.websave">{{font.name}}</li>
+		</ul>
+	</div>
 </div>
