--- a/src/partials/fontlist.html
+++ b/src/partials/fontlist.html
@@ -2,7 +2,7 @@
 	<h3 ng-click="toggle()">{{providerName}}</h3>
 	<div ng-if="isActive()">
 		<ul>
-			<li ng-repeat="font in fonts | filter:current.search | filter:{category: current.category}:true | startFrom: page.current * page.size | limitTo: page.size ">
+			<li ng-repeat="font in fonts | fuzzySearch:current.search | filter:{category: current.category}:true | startFrom: page.current * page.size | limitTo: page.size ">
 				<input
 					type="radio"
 					ng-model="current.font"
