Previews for all the google fontzzz.

--- a/src/partials/fontlist.html
+++ b/src/partials/fontlist.html
@@ -2,17 +2,7 @@
 	<h3 ng-click="toggle()">{{providerName}}</h3>
 	<div ng-if="isActive()">
 		<ul>
-			<li ng-repeat="font in getFilteredFonts() | startFrom: page.current * page.size | limitTo: page.size ">
-				<input
-					type="radio"
-					ng-model="current.font"
-					value="{{font.key}}"
-					name="fs-{{id}}-font"
-					id="fs-{{id}}-font-{{font.key}}" />
-				<label
-					for="fs-{{id}}-font-{{font.key}}"
-					style="font-family: {{font.stack}};">{{font.name}}</label>
-			</li>
+			<jd-font ng-repeat="font in getFilteredFonts() | startFrom: page.current * page.size | limitTo: page.size" />
 		</ul>
 		<button
 			ng-repeat="i in getPages() track by $index"
