Add reverse sort button.

--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -4,6 +4,7 @@
 	<div class="fs-window" ng-show="active">
 		<input type="text" name="fs-{{id}}-search" ng-model="current.search" />
 		<select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select>
+		<button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button>
 		<div>
 			<button
 				ng-repeat="category in categories"
