normalize class prefixes.

--- a/src/partials/font.html
+++ b/src/partials/font.html
@@ -3,9 +3,9 @@
 		type="radio"
 		ng-model="current.font"
 		value="{{font.key}}"
-		name="fs-{{id}}-font"
-		id="fs-{{id}}-font-{{font.key}}" />
+		name="jdfs-{{id}}-font"
+		id="jdfs-{{id}}-font-{{font.key}}" />
 	<label
-		for="fs-{{id}}-font-{{font.key}}"
+		for="jdfs-{{id}}-font-{{font.key}}"
 		style="font-family: {{font.stack}};">{{font.name}}</label>
 </li>
