Start implementation of api.

--- a/src/partials/font.html
+++ b/src/partials/font.html
@@ -2,7 +2,7 @@
 	<input
 		type="radio"
 		ng-model="current.font"
-		value="{{font.key}}"
+		ng-value="font"
 		name="jdfs-{{id}}-font"
 		id="jdfs-{{id}}-font-{{font.key}}" />
 	<label
