--- a/src/partials/fontlist.html
+++ b/src/partials/fontlist.html
@@ -1,11 +1,11 @@
 <div class="jdfs-provider jdfs-provider-{{providerKey}}" ng-class="{'jdfs-active': isActive()}">
-	<h3 ng-click="toggle()">{{providerName}}
+	<p class="jdfs-category-title" ng-class="{'jdfs-active': isActive()}" ng-click="toggle()">{{providerName}}
 		<span ng-if="getFilteredFonts().length == fonts.length">({{fonts.length}})</span>
 		<span ng-if="fonts.length && getFilteredFonts().length != fonts.length">({{getFilteredFonts().length}}/{{fonts.length}})</span>
 		<span ng-if="!fonts.length">(…)</span>
-	</h3>
+	</p>
 	<div ng-if="isActive()">
-		<ul>
+		<ul class='jdfs-fontlist'>
 			<jd-font ng-repeat="font in getFilteredFonts() | startFrom: page.current * page.size | limitTo: page.size" />
 		</ul>
 		<button
