--- a/demo/styles.less
+++ b/demo/styles.less
@@ -1,3 +1,45 @@
+@import url('lib/reset.less');
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300);
+
+*,*:before,*:after{
+  -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box;
+}
+
 body {
-	background: #f2f2f2;
+  background: #eee;
+  font-family: "Open Sans";
+}
+
+.wrap{
+  padding: 3em;
+  justify-content: center;
+
+
+}
+
+.fontselect{
+
+  justify-content: center;
+  align-items: center;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+}
+
+h1{
+  display: inline-block;
+  flex: 1 1;
+  margin: 1em;
+}
+
+.jdfs-main{
+  margin: 1em;
+  display: inline-block;
+  flex: 1 3;
 }
