--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -1,15 +1,18 @@
 <div class="jdfs-main" id="jd-fontselect-{{id}}">
 	<button ng-click="toggle()" class="jdfs-toggle">Select Font</button>
 	<div class="jdfs-window" ng-show="active">
-		<input type="text" name="jdfs-{{id}}-search" ng-model="current.search" />
-		<select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select>
-		<button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button>
-		<div ng-repeat="(key, name) in subsets">
-			<input ng-model="current.subsets[key]" type="checkbox" id="jdfs-{{id}}-subset-{{key}}" />
-			<label for="jdfs-{{id}}-subset-{{key}}">{{name}}</label>
+		<div class="jdfs-topbar">
+			<input type="text" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
+			<select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select>
+			<button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button>
+			<div ng-repeat="(key, name) in subsets">
+				<input ng-model="current.subsets[key]" type="checkbox" id="jdfs-{{id}}-subset-{{key}}" />
+				<label for="jdfs-{{id}}-subset-{{key}}">{{name}}</label>
+			</div>
 		</div>
-		<div>
+		<div class="jdfs-filter">
 			<button
+				class="jdfs-filterbtn"
 				ng-repeat="category in categories"
 				ng-class="{'jdfs-active': category.key == current.category}"
 				ng-click="setCategoryFilter(category.key)"
