basic styling for the demo page

--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -1,6 +1,4 @@
-.jdfs-main {
-	max-height: 300px;
-}
+
 
 @tabBg: #eee;
 @activeTab: #939393;
@@ -11,12 +9,15 @@
 
 
 .jdfs-window{
+  z-index: 3000;
   position: absolute;
   
   padding: 1em 0;
   border-radius: 4px;
 
   background: white;
+	max-height: 500px;
+  width: 300px;
   max-width: 20em;
 
   box-shadow: 0 0 2px 2px rgba(0,0,0,.5);
