--- a/demo/styles.less
+++ b/demo/styles.less
@@ -7,29 +7,53 @@
   box-sizing: border-box;
 }
 
+@bodybgcolor: #e8e8e8;
+@jimdocolor: #0099ee;
+@contentbgcolor: #f7f7f9;
+
+.relacon{
+  position: relative;
+}
 body {
-  background: #eee;
+  background: @bodybgcolor;
   font-family: "Open Sans";
 }
-
+.mw{
+  margin: 0 auto;
+  max-width: 30em;  
+}
 .wrap{
-  padding: 3em;
-  justify-content: center;
+}
+header{
+    padding: 3em 0;
+    text-align: center;
+    text-transform: uppercase;
+  h1{
+    color: @jimdocolor;
 
-
+  }
+  h2{
+    font-weight: 300;
+  }
+  h1,h2{
+    padding: 0;
+    margin: 0;
+  }
 }
 
-.fontselect{
 
+.contentwrap {
+  padding: 2em 0;
+  background: @contentbgcolor;
+}
+
+
+.fontselect{
+  position: absolute;
   justify-content: center;
   align-items: center;
-
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-
+  left: 1em;
+  top: 1em;
 }
 
 h1{
@@ -42,4 +66,20 @@ h1{
   margin: 1em;
   display: inline-block;
   flex: 1 3;
+}
+.footerwrap{
+  background: #393939;
+}
+footer{
+  text-align: center;
+  padding: 5em 0;
+  a{
+    display: inline-block;
+    margin: 0 .5em;
+    text-decoration: none;
+    color: @contentbgcolor;
+    &:hover{
+      color: @jimdocolor;
+    }
+  }
 }
