--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -1,28 +1,47 @@
 <div class="jdfs-main" id="jd-fontselect-{{id}}">
 	<button ng-click="toggle()" class="jdfs-toggle">Select Font</button>
+	<input type="text" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
 	<div class="jdfs-window" ng-show="active">
-		<div class="jdfs-topbar">
-			<input type="text" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
-			<select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select>
-			<button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button>
-			<div ng-repeat="(key, name) in subsets">
-				<input ng-model="current.subsets[key]" type="checkbox" id="jdfs-{{id}}-subset-{{key}}" />
-				<label for="jdfs-{{id}}-subset-{{key}}">{{name}}</label>
-			</div>
+
+			<!-- <select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select> -->
+			<!-- <button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button> -->
+
+
+			
+
+			
+
+		<div class="jdfs-fontlistcon">
+
+			<jd-fontlist
+				fsid="id"
+				current="current"
+				fonts="fonts[provider]"
+				provider="{{provider}}"
+				ng-repeat="provider in providers" />
+				
 		</div>
+
 		<div class="jdfs-filter">
+	
+
 			<button
 				class="jdfs-filterbtn"
 				ng-repeat="category in categories"
 				ng-class="{'jdfs-active': category.key == current.category}"
 				ng-click="setCategoryFilter(category.key)"
-				ng-model="current.category">{{category.name}}</button>
+				ng-model="current.category">
+				{{category.name}}
+			</button>
+
+			<div class="jdfs-charsets">
+				<div ng-repeat="(key, name) in subsets">
+					<input ng-model="current.subsets[key]" type="checkbox" id="jdfs-{{id}}-subset-{{key}}" />
+					<label for="jdfs-{{id}}-subset-{{key}}">{{name}}</label>
+				</div>
+			</div>
+
 		</div>
-		<jd-fontlist
-			fsid="id"
-			current="current"
-			fonts="fonts[provider]"
-			provider="{{provider}}"
-			ng-repeat="provider in providers" />
+
 	</div>
 </div>
