--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -1,6 +1,6 @@
 <div class="jdfs-main" id="jd-fontselect-{{id}}">
-	<button ng-click="toggle()" class="jdfs-toggle">Select Font</button>
-	<input type="text" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
+	<button ng-click="toggle()" class="jdfs-toggle">Current Font</button>
+	<input type="text" class="jdfs-search" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
 	<div class="jdfs-window" ng-show="active">
 
 			<!-- <select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select> -->
