--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -1,15 +1,16 @@
 <div class="jdfs-main" id="jd-fontselect-{{id}}">
-	<button ng-click="toggle()" class="jdfs-toggle">Current Font</button>
+	<button
+		ng-click="toggle()"
+		class="jdfs-toggle"
+		style="font-family: {{current.font.key}};"
+		>
+		{{current.font.name || "Current Font"}}
+	</button>
 	<input type="text" class="jdfs-search" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
 	<div class="jdfs-window" ng-show="active">
 
 			<!-- <select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select> -->
 			<!-- <button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button> -->
-
-
-			
-
-			
 
 		<div class="jdfs-fontlistcon">
 
@@ -24,20 +25,22 @@
 
 		<div class="jdfs-filter">
 	
-
+		
 			<button
-				class="jdfs-filterbtn"
+				class="jdfs-filterbtn jdfs-fontstyle-{{category.key}}"
 				ng-repeat="category in categories"
 				ng-class="{'jdfs-active': category.key == current.category}"
 				ng-click="setCategoryFilter(category.key)"
 				ng-model="current.category">
-				{{category.name}}
 			</button>
 
-			<div class="jdfs-charsets">
-				<div ng-repeat="(key, name) in subsets">
-					<input ng-model="current.subsets[key]" type="checkbox" id="jdfs-{{id}}-subset-{{key}}" />
-					<label for="jdfs-{{id}}-subset-{{key}}">{{name}}</label>
+
+			<div class="jdfs-searchoptions">
+				<div class="jdfs-charsets">
+					<div ng-repeat="(key, name) in subsets">
+						<input ng-model="current.subsets[key]" type="checkbox" id="jdfs-{{id}}-subset-{{key}}" />
+						<label for="jdfs-{{id}}-subset-{{key}}">{{name}}</label>
+					</div>
 				</div>
 			</div>
 
