Add reset method and use it if the state gets invalid. - fixes #2

--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -11,7 +11,7 @@
 	<input type="text" class="jdfs-search" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
 	<div class="jdfs-window" ng-show="active">
 
-			<!-- <select ng-model="current.sort.attr" ng-options="a.name for a in searchAttrs"></select> -->
+			<!-- <select ng-model="current.sort.attr" ng-options="a.name for a in sortAttrs"></select> -->
 			<!-- <button ng-click="reverseSort()">{{current.sort.direction ? '▼' : '▲'}}</button> -->
 
 		<div class="jdfs-fontlistcon">
