--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -2,22 +2,20 @@
 
 @import url("/src/jdfs-iconfont/style.css");
 
-@tabBg:                  #eee;
+@tabBg:            #eee;
 @activeTab:           #939393;
 
 
 
 @fontColor:           #282828;
 @hoverBgColor:        #828282;
-@highlightcolor:      #7ec621;
 @selectedFontColor:     white;
 
-@filterBtnBg:         #2E2E2E;
-@filterFontColor:       white;
-@containerBg:         #464646;
+@filterBtnBg:         white;
+@containerBg:         #d6d6d6;
 
-@outerBorderRadius:       0;
-@innerBorderRadius:       0;
+@outerBorderRadius:       4px;
+@innerBorderRadius:       2px;
 
 .iconfont,[class^="icon-"], [class*=" icon-"] {
   font-family: 'jdfs-iconfont';
@@ -43,6 +41,7 @@
 }
 
 
+
 .jdfs-window{
   top: 100%;
   left: 0;
@@ -65,6 +64,9 @@
 }
 
 .jdfs-toggle,.jdfs-search{
+  padding: 1rem;
+  min-width: 150px;
+
   display: flex;
 
   justify-content: center;
@@ -73,10 +75,6 @@
   border: none;
   background: white;
 
-  padding: 1rem;
-  width: 15rem;
-  height: 3rem;
-  line-height: 1;
   margin: 0;
   & > *{
     flex: 1 auto;
@@ -109,13 +107,6 @@
     padding: .5em 1em;
     display: block;
     width: 100%;
-    &:hover{
-      background: #f1f1f1;
-    }
-    &.jdfs-active {
-      color: @selectedFontColor;
-      background: @highlightcolor;
-    }
 
   }
 
@@ -126,9 +117,7 @@
 .jdfs-fontpagination{
   border: none;
   background: white;
-  &.jdfs-active{
-    background: @highlightcolor;
-  }
+
 }
 
 .jdfs-filter{
@@ -145,7 +134,6 @@
   justify-content: space-between;
   flex-wrap: wrap;
 
-  color: @filterFontColor;
   background: @containerBg;
 
 }
@@ -161,24 +149,35 @@
   line-height: 1.2;
   display: inline-block;
 
-  color: gray;
   background: @filterBtnBg;
   border: none;
 
-  &:hover{
-    color: white;
-    background: @hoverBgColor;
-  }
-  &.jdfs-active{
-    background: @highlightcolor;
-    color: white;
-  }
+
   &:focus, &:active{
     outline: none;
   }
   &:last-child{
     margin-bottom: 0;
   }
+}
+
+
+
+.jdfs-searchoptions{
+  flex: 0 0 100%;
+}
+
+.jdfs-provider-title{
+  background: @tabBg;
+  margin: 0;
+  font-size: .8em;
+  padding: .2em 1em;
+}
+
+.jdfs-highlight,
+.jdfs-highlight:hover{
+  background: #81b4fc;
+  color: white;
 }
 
 .jdfs-fontstyle-serif:after{
@@ -199,18 +198,4 @@
 }
 .jdfs-fontstyle-Other{
   display: none;
-}
-
-
-.jdfs-searchoptions{
-  flex: 0 0 100%;
-}
-.jdfs-provider-title{
-  background: @tabBg;
-  margin: 0;
-  font-size: .8em;
-  padding: .2em 1em;
-  &.jdfs-active{
-    background: @activeTab;
-  }
 }
