--- a/src/partials/font.html
+++ b/src/partials/font.html
@@ -6,7 +6,7 @@
 		name="jdfs-{{id}}-font"
 		id="jdfs-{{id}}-font-{{font.key}}" />
 	<label
-		ng-class="{'jdfs-active': current.font.name == font.name}"
+		ng-class="{'jdfs-active jdfs-highlight': current.font.name == font.name}"
 		for="jdfs-{{id}}-font-{{font.key}}"
 		style="font-family: {{font.stack}};">{{font.name}}</label>
 </li>
