--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -2,13 +2,20 @@
 	<button
 		ng-click="toggle()"
 		class="jdfs-toggle"
-		style="font-family: {{current.font.key}};"
+		style="font-family: {{current.font.stack}};"
+		ng-show="!active"
 		>
 		<span>
-			{{current.font.name || "Current Font"}}
+			{{current.font.name || "Choose a Font"}}
 		</span>
 	</button>
-	<input type="text" class="jdfs-search" placeholder="Search by Fontname" name="jdfs-{{id}}-search" ng-model="current.search" />
+	<input
+		type="text"
+		class="jdfs-search"
+		placeholder="Search by Fontname"
+		name="jdfs-{{id}}-search"
+		ng-show="active"
+		ng-model="current.search" />
 	<div class="jdfs-window" ng-show="active">
 
 			<!-- <select ng-model="current.sort.attr" ng-options="a.name for a in sortAttrs"></select> -->
