--- a/src/partials/fontlist.html
+++ b/src/partials/fontlist.html
@@ -8,10 +8,13 @@
 		<ul class='jdfs-fontlist'>
 			<jd-font ng-repeat="font in getFilteredFonts() | startFrom: page.current * page.size | limitTo: page.size" />
 		</ul>
-		<button
-			class="jdfs-fontpagination"
-			ng-repeat="i in getPages() track by $index"
-			ng-class="{'jdfs-active jdfs-highlight': page.current == $index}"
-			ng-click="setCurrentPage($index)">{{$index + 1}}</button>
+		<div class="jdfs-paginationcon">
+			<button
+				class="jdfs-fontpagination"
+				ng-repeat="i in getPages() track by $index"
+				ng-class="{'jdfs-active jdfs-highlight': page.current == $index}"
+				ng-click="setCurrentPage($index)">{{$index + 1}}
+			</button>
+		</div>
 	</div>
 </div>
