--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -65,7 +65,7 @@
 }
 
 .jdfs-toggle,.jdfs-search{
-  padding: 1rem;
+  height: 30px;
   min-width: 150px;
 
   display: flex;
@@ -80,6 +80,9 @@
   & > *{
     flex: 1 auto;
   }
+}
+.jdfs-search{
+  padding: 1em;
 }
 
 .jdfs-fontlistcon{
