--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -1,9 +1,6 @@
 
-
 @tabBg:            #eee;
 @activeTab:           #939393;
-
-
 
 @fontColor:           #282828;
 @hoverBgColor:        #828282;
@@ -17,12 +14,18 @@
 
 
 .jdfs-main{
+  width: 150px;
+  height: 50px;
   position: relative;
   display: inline-flex;
   *, *:after, *:before{
     box-sizing: border-box;
   }
   font-size: 16px;
+
+
+
+  background: white;
 }
 
 
@@ -48,23 +51,15 @@
   flex-direction: row;
   align-items: flex-start;
 }
-
+.jdfs-toggle{
+  margin: 0;
+  background: transparent;
+}
 .jdfs-toggle,.jdfs-search{
-  height: 30px;
-  min-width: 150px;
-
-  display: flex;
-
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
 
   border: none;
-  background: white;
-
-  margin: 0;
-  & > *{
-    flex: 1 auto;
-  }
 }
 .jdfs-search{
   padding: 1em;
@@ -134,7 +129,7 @@
   width: 5em;
   padding: 1em 0;
   flex: 1 1 45%;
-  font-size: 1em;
+  font-size: .7em;
   line-height: 1.2;
   vertical-align: middle;
   display: inline-block;
